add log_level configuration
This is to support the env variable OTEL_LOG_LEVEL.

Fixes #120

Signed-off-by: Alex Boten <223565+codeboten@users.noreply.github.com>

--- a/examples/kitchen-sink.yaml
+++ b/examples/kitchen-sink.yaml
@@ -15,6 +15,11 @@ file_format: "0.1"
 # Environment variable: OTEL_SDK_DISABLED
 disabled: false
 
+# Configure the log level used by the SDK logger
+#
+# Environment variable: OTEL_LOG_LEVEL
+log_level: info
+
 # Configure general attribute limits. See also tracer_provider.limits, logger_provider.limits.
 attribute_limits:
   # Configure max attribute value size.
