--- a/schema/opentelemetry_configuration.json
+++ b/schema/opentelemetry_configuration.json
@@ -11,6 +11,9 @@
         "disabled": {
             "type": ["boolean", "null"]
         },
+        "log_level": {
+            "type": ["string", "null"]
+        },
         "attribute_limits": {
             "$ref": "#/$defs/AttributeLimits"
         },
